Fix broken facsimile dragging on mobile
Dragging jumps the facsimile to incorrect position.

--- a/src/components/facsimiles/facsimiles.scss
+++ b/src/components/facsimiles/facsimiles.scss
@@ -98,6 +98,7 @@ facsimiles {
     img{
         cursor: move;
         // https://github.com/hammerjs/hammer.js/issues/1050#issuecomment-267595556
-        touch-action: none;
+        // Need to use !important because something is trying to override the value.
+        touch-action: none !important;
     }
 }
